# CodeJam2021

./: CMakeLists.txt  README.md  main.cpp
Qualifiers/: MedianSort.cpp  MoonsAndUmbrellas.cpp  Reversort.cpp  ReversortEngineering.cpp  partAMedianSort.cpp  testingWorks.cpp
Round1A/: appendSort.cpp  interactive_runner.py  primeTime.cpp
Round1B/: BrokenClock.cpp  Subtransmutation.cpp
Round1C/: ClosestPick.cpp  DoubleOrNoting.cpp
